--- a/style.css
+++ b/style.css
@@ -1,17 +1,124 @@
 .section1 {
     background-color: #1F2937;
     color: #F9FAF8;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
 }
+
+.headline {
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.nav {
+    text-align: right;
+}
+
+.nav a {
+    color: #E5E7EB;
+    font-size: 18px;
+    text-decoration: none;
+    margin: 10px;
+
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+}
+
+.info {
+    padding: 20px;
+    max-width: 325px;
+}
+
+.image {
+    padding: 20px;
+}
+
+.section2 {
+    text-align: center;
+    padding: 30px;
+}
+
+h2 {
+   padding: 10px;
+}
+
+.container {
+    display:flex;
+    justify-content: space-around;
+    padding-bottom: 30px;
+    
+}
+
+.image-text {
+    text-align: center;
+}
+
+.image-text img {
+    max-width: 100%;
+}
+
 
 .section3 {
     background-color: #E5E7EB;
     color: #1F2937;
     font-size: 36px;
     font-weight: light italic;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote {
+    text-align: left;
+    max-width: 750px;
+    padding-top: 30px;
+    margin-bottom: 5px;
+}
+
+.author {
+   margin-top: auto;
+   padding-bottom: 30px;
+}
+
+.section4 {
+    margin: 30px;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    background-color: blue;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+
+}
+
+.b {
+    padding: 20px;
+}
+
+.c {
+    padding: 20px;
+    margin: 20px
 }
 
 footer {
     background-color: #1F2937;
+    color: #E5E7EB;
+    padding: 10px;
+    text-align: center;
 }
 
 
