--- a/style.css
+++ b/style.css
@@ -1,26 +1,52 @@
 .section1 {
     background-color: #1F2937;
     color: #F9FAF8;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
+    
 }
 
 .headline {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    width: 100%;
+}
+
+.logo {
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    padding-bottom: 20px;
+    font-size: 26px ;
+    font-family: 'Chewy', cursive;
+    max-width: 100%; 
+    height: auto;
+    
 }
 
 .nav {
-    text-align: right;
+    padding: 20px;
 }
 
 .nav a {
     color: #E5E7EB;
-    font-size: 18px;
-    text-decoration: none;
+    font-size: 16px;
+    text-decoration: underline;
     margin: 10px;
+}
 
+@media (min-width: 768px) {
+    .nav a {
+        font-size: 20px;
+    }
+
+}
+
+@media (min-width: 1024px) {
+    .nav a {
+        font-size: 24px; 
+    }
 }
 
 .header {
@@ -32,12 +58,30 @@
 }
 
 .info {
-    padding: 20px;
-    max-width: 325px;
+    padding: 2%;
+    max-width: 90%;
+}
+
+.info p {
+    max-width: 100%;
+    font-size: 14px;
+    font-family: 'Finger Paint', cursive;
+}
+
+.info button {
+    height: 50%;
+    padding: 5px;
+    width:30%;
+
 }
 
 .image {
-    padding: 20px;
+    padding: 2%; 
+    max-height: 20%; 
+    max-width: 20%;
+    border-radius: 50px;
+
+    
 }
 
 .section2 {
@@ -47,6 +91,8 @@
 
 h2 {
    padding: 10px;
+   font-family: 'Cabin', sans-serif;
+   font-size: 22px;
 }
 
 .container {
@@ -58,18 +104,42 @@ h2 {
 
 .image-text {
     text-align: center;
+    padding: 5px;
 }
 
 .image-text img {
     max-width: 100%;
+    height: auto;
+}
+
+.image-text p {
+    max-width: 100%;
+    margin: 0 auto;
+    font-family: 'Cabin', sans-serif;
+    font-size: 14px;
+}
+
+@media (min-width: 768px) {
+    .image-text p {
+        font-size: 16px;
+    }
+
+}
+
+@media (min-width: 1024px) {
+    .image-text p {
+        font-size: 20px; 
+    }
 }
 
 
 .section3 {
     background-color: #E5E7EB;
     color: #1F2937;
-    font-size: 36px;
-    font-weight: light italic;
+    font-size: 18px;
+    font-weight: 300;
+    font-style: italic;
+    font-family: 'Finger Paint', cursive;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,7 +147,7 @@ h2 {
 
 .quote {
     text-align: left;
-    max-width: 750px;
+    max-width: 70%;
     padding-top: 30px;
     margin-bottom: 5px;
 }
@@ -85,6 +155,20 @@ h2 {
 .author {
    margin-top: auto;
    padding-bottom: 30px;
+   max-width: 70%;
+}
+
+@media (min-width: 768px) {
+    .quote , .author {
+        font-size: 24px;
+    }
+
+}
+
+@media (min-width: 1024px) {
+    .info p {
+        font-size: 30px; 
+    }
 }
 
 .section4 {
@@ -98,20 +182,28 @@ h2 {
 .content {
     display: flex;
     flex-direction: row;
+    flex: 1;
+    justify-content: space-around;
+    align-items: center;
     background-color: blue;
     color: white;
     padding: 20px;
     border-radius: 10px;
+    font-family: 'Cabin', sans-serif;
+    max-height: 90%; 
+    max-width: 90%;
 
 }
 
-.b {
+.join {
     padding: 20px;
 }
 
-.c {
-    padding: 20px;
-    margin: 20px
+.button {
+    height: 50%;
+    padding: 10px;
+    width:30%;
+    
 }
 
 footer {
@@ -119,6 +211,7 @@ footer {
     color: #E5E7EB;
     padding: 10px;
     text-align: center;
+    font-family: 'Cabin', sans-serif;
 }
 
 
