--- a/style.css
+++ b/style.css
@@ -26,15 +26,54 @@
 }
 
 .nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
 }
 
 .nav a {
+   
+    text-decoration: underline;
     color: #E5E7EB;
     font-size: 16px;
-    text-decoration: underline;
-    margin: 10px;
+    padding: 20px; 
+    margin: 0 10px;
+    
 }
+
+
+.text-image {
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    left: 0;
+    transition: left 0.5s ease-in-out;
+}
+
+
+
+.text-image:hover {
+    animation: moveLeftRight 2s linear infinite;
+
+}
+
+@keyframes moveLeftRight {
+    0%, 100% {
+        left: 0; /* Start and end at the original position */
+    }
+    50% {
+        left: 2cm; /* Move to the right by 2cm */
+    }
+}
+
+
+.text-image img {
+    width: 180px;
+    height: 180px;
+}
+
 
 @media (min-width: 768px) {
     .nav a {
@@ -104,7 +143,7 @@
 h2 {
    padding: 10px;
    font-family: 'Cabin', sans-serif;
-   font-size: 22px;
+   font-size: 30px;
 }
 
 .container {
@@ -155,6 +194,8 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+        
+
 }
 
 .quote {
